# notion-py

./: .gitignore  pyproject.toml
.github/workflows/: release_pypi.yml
notion/: block.py  client.py  collection.py  settings.py  space.py  store.py  utils_ssl.py
